--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "axios": "^1.11.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-qr-code": "^2.0.18",
     "react-router-dom": "^7.8.0",
     "react-to-print": "^3.1.1",
+    "react-toastify": "^11.0.5",
+    "react-top-loading-bar": "^3.0.2",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
